--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://use.typekit.net/kxv4jdb.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
     <link rel="stylesheet" href="css/styles.css">
     <title>Portfolio</title>
