--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       if (prevScrollpos > currentScrollPos) {
         document.getElementById("navbar").style.top = "0";
       } else {
-        document.getElementById("navbar").style.top = "-70px";
+        document.getElementById("navbar").style.top = "-100%";
       }
       prevScrollpos = currentScrollPos;
     }
