--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   <section id="welcome-section" class="welcome-section">
     <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.4" data-tilt-speed="2000" data-tilt-reverse="true">
       <div class="card-contents">
-        <h1 >Hi.<br>I am Vaibhav,</h1>
-        <p>Web Developer and UI/UX Designer</p>
+        <h1 >Hi.<br>I am Vaibhav</h1>
+        <p>A Web Developer and UI/UX Designer</p>
       </div>
     </div>
   </section>
@@ -64,7 +64,7 @@
       </a>
       <a href="https://codepen.io/vaibhav22-08/full/Pojyxwb" target="_blank">
         <div class="project-tile">
-          <img src="img/survey.png" alt="" width="200px">
+          <img src="img/survey.jpg" alt="" width="200px">
           <h4>Survey Form</h4>
         </div>
       </a>
